--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "main": "tsc && node ./dist/main",
+    "test": "tsc && jest ./dist/test",
+    "coverage": "tsc && jest ./dist/test --coverage"
   },
   "keywords": [],
   "author": "",
