--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.7.0"
+  },
+  "devDependencies": {
+    "tslint": "^6.1.3",
     "typescript": "^4.6.3"
   }
 }
