--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "main": "tsc && node ./dist/main",
+    "build": "tsc -p .",
+    "main": "tsc && node ./dist/src/main",
     "test": "tsc && jest ./dist/test",
     "coverage": "tsc && jest ./dist/test --coverage"
   },
@@ -12,12 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.0",
+    "@types/sinon": "^10.0.11",
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
     "jest": "^27.5.1",
+    "pg-promise": "^10.11.1",
+    "sinon": "^14.0.0",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.16",
     "tslint": "^6.1.3",
     "typescript": "^4.6.3"
   }
